test(tutorial): Ensure we actually test code
Biggest problem identified is that we are incorrectly setting the help
usage in `04_04_custom`

--- a/examples/tutorial_derive/04_01_enum.md
+++ b/examples/tutorial_derive/04_01_enum.md
@@ -1,10 +1,10 @@
 ```console
-$ 04_01_enum --help
+$ 04_01_enum_derive --help
 clap [..]
 A simple to use, efficient, and full-featured Command Line Argument Parser
 
 USAGE:
-    04_01_enum[EXE] <MODE>
+    04_01_enum_derive[EXE] <MODE>
 
 ARGS:
     <MODE>    What mode to run the program in [possible values: fast, slow]
@@ -13,13 +13,13 @@ OPTIONS:
     -h, --help       Print help information
     -V, --version    Print version information
 
-$ 04_01_enum fast
+$ 04_01_enum_derive fast
 Hare
 
-$ 04_01_enum slow
+$ 04_01_enum_derive slow
 Tortoise
 
-$ 04_01_enum medium
+$ 04_01_enum_derive medium
 ? failed
 error: "medium" isn't a valid value for '<MODE>'
 	[possible values: fast, slow]
