fix(help): Collapse usage to one line
After looking at more examples, I've become more attached to this
briefer format.

Part of #4132

--- a/examples/tutorial_builder/04_01_enum.md
+++ b/examples/tutorial_builder/04_01_enum.md
@@ -2,8 +2,7 @@
 $ 04_01_enum --help
 A simple to use, efficient, and full-featured Command Line Argument Parser
 
-Usage:
-    04_01_enum[EXE] <MODE>
+Usage: 04_01_enum[EXE] <MODE>
 
 Arguments:
     <MODE>    What mode to run the program in [possible values: fast, slow]
