--- a/examples/tutorial_derive/04_01_enum.md
+++ b/examples/tutorial_derive/04_01_enum.md
@@ -2,8 +2,7 @@
 $ 04_01_enum_derive --help
 A simple to use, efficient, and full-featured Command Line Argument Parser
 
-Usage:
-    04_01_enum_derive[EXE] <MODE>
+Usage: 04_01_enum_derive[EXE] <MODE>
 
 Arguments:
     <MODE>    What mode to run the program in [possible values: fast, slow]
