fix(parser): Quote the suggested help
We do it elsewhere but here it is only distinguished coloring.

Inspired by #4218

--- a/examples/tutorial_builder/04_01_enum.md
+++ b/examples/tutorial_builder/04_01_enum.md
@@ -22,6 +22,6 @@ $ 04_01_enum medium
 error: "medium" isn't a valid value for '<MODE>'
   [possible values: fast, slow]
 
-For more information try --help
+For more information try '--help'
 
 ```
