feat: Support visible aliases for possible values
Show visible aliases in help and in generated manpages.

Does not show aliases in error messages yet.

--- a/examples/tutorial_derive/04_01_enum.md
+++ b/examples/tutorial_derive/04_01_enum.md
@@ -5,7 +5,7 @@ A simple to use, efficient, and full-featured Command Line Argument Parser
 Usage: 04_01_enum_derive[EXE] <MODE>
 
 Arguments:
-  <MODE>  What mode to run the program in [possible values: fast, slow]
+  <MODE>  What mode to run the program in [possible values: fast (alias: quick), slow]
 
 Options:
   -h, --help     Print help information
@@ -16,6 +16,12 @@ Hare
 
 $ 04_01_enum_derive slow
 Tortoise
+
+$ 04_01_enum_derive quick
+Hare
+
+$ 04_01_enum_derive zippy
+Hare
 
 $ 04_01_enum_derive medium
 ? failed
