--- a/examples/tutorial_builder/04_01_enum.md
+++ b/examples/tutorial_builder/04_01_enum.md
@@ -39,7 +39,7 @@ Tortoise
 
 $ 04_01_enum medium
 ? failed
-error: "medium" isn't a valid value for '<MODE>'
+error: 'medium' isn't a valid value for '<MODE>'
   [possible values: fast, slow]
 
 For more information try '--help'
