--- a/examples/tutorial_builder/04_01_enum.md
+++ b/examples/tutorial_builder/04_01_enum.md
@@ -14,7 +14,7 @@ Arguments:
 
 Options:
   -h, --help
-          Print help information (use `-h` for a summary)
+          Print help information (use '-h' for a summary)
 
   -V, --version
           Print version information
@@ -28,7 +28,7 @@ Arguments:
   <MODE>  What mode to run the program in [possible values: fast, slow]
 
 Options:
-  -h, --help     Print help information (use `--help` for more detail)
+  -h, --help     Print help information (use '--help' for more detail)
   -V, --version  Print version information
 
 $ 04_01_enum fast
